--- a/src/main/resources/templates/system/ip.html
+++ b/src/main/resources/templates/system/ip.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/ip.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/ip.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="ip-tool-bar" style="padding: 10px">
     <strong>拦截开关:</strong>
     <div class="easyui-switchbutton  " id="ip-switchButton-btn" style="width:70px">
@@ -41,7 +36,6 @@
     </form>
 </div>
 </div>
-</body>
-</html>
+
 
 
