--- a/src/main/resources/templates/system/organization.html
+++ b/src/main/resources/templates/system/organization.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/organization.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/organization.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="tool-bar" style="padding: 10px">
     <div class="easyui-linkbutton select-btn " data-options="iconCls:'icon-reload'" style="width:70px">刷新</div>
     <div class="easyui-linkbutton save-btn" data-options="iconCls:'icon-add'" style="width:70px">新增</div>
@@ -62,8 +57,6 @@
     </form>
 </div>
 </div>
-</body>
-</html>
 
 
 
