--- a/src/main/resources/templates/system/permission.html
+++ b/src/main/resources/templates/system/permission.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/permission.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/permission.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="permission-tool-bar" style="padding: 10px">
     <div href="#" class="easyui-menubutton" menu="#save-permission-btn" data-options="iconCls:'icon-add'"
          style="width:70px">新增
@@ -90,7 +85,6 @@
         </form>
     </div>
 </div>
-</body>
-</html>
+
 
 
