--- a/src/main/resources/templates/system/role.html
+++ b/src/main/resources/templates/system/role.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/role.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/role.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="role-tool-bar" style="padding: 10px">
     <div class="easyui-linkbutton " id="role-select-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
     </div>
@@ -60,8 +55,7 @@
         </div>
     </form>
 </div>
-</body>
-</html>
+
 
 
 
