--- a/src/main/resources/templates/ssh/host.html
+++ b/src/main/resources/templates/ssh/host.html
@@ -1,11 +1,5 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/ssh/host.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/ssh/host.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <div id="host-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="host-search-form">
         <div class="easyui-linkbutton " id="host-flash-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
@@ -64,8 +58,7 @@
         </div>
     </form>
 </div>
-</body>
-</html>
+
 
 
 
