--- a/src/main/resources/templates/ssh/task.html
+++ b/src/main/resources/templates/ssh/task.html
@@ -1,11 +1,5 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/ssh/task.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/ssh/task.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <div id="task-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="user-search-form">
         <div class="easyui-linkbutton " id="user-flash-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
@@ -22,7 +16,6 @@
     </form>
 </div>
 <div id="task_grid" style="padding: 10px">
-
 </div>
 
 <form id="task_form">
@@ -79,9 +72,6 @@
                                                            class="easyui-textbox easyui-validatebox"/></p>
     </form>
 </div>
-
-</body>
-</html>
 
 
 
