--- a/src/main/resources/templates/system/data.html
+++ b/src/main/resources/templates/system/data.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/data.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/data.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="data-tool-bar" style="padding: 10px">
     <a href="#" class="easyui-menubutton" menu="#save-data-btn" data-options="iconCls:'icon-add'"
        style="width:70px">新增</a>
@@ -83,8 +78,7 @@
         </form>
     </div>
 </div>
-</body>
-</html>
+
 
 
 
