--- a/src/main/resources/templates/system/job.html
+++ b/src/main/resources/templates/system/job.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/job.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/job.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="job-tool-bar" style="padding: 10px">
     <div class="easyui-linkbutton  " id="job-select-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
     </div>
@@ -119,8 +114,7 @@
     </form>
 </div>
 </div>
-</body>
-</html>
+
 
 
 
