--- a/src/main/resources/templates/system/log.html
+++ b/src/main/resources/templates/system/log.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/log.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/log.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="log-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="select_form">
         <div class="easyui-linkbutton " id="log-flash-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
@@ -24,8 +19,7 @@
 <div id="log_grid" style="padding: 10px">
 
 </div>
-</body>
-</html>
+
 
 
 
