--- a/src/main/resources/templates/system/online.html
+++ b/src/main/resources/templates/system/online.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/online.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/online.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="online-tool-bar" style="padding: 10px">
     <div class="easyui-linkbutton " id="online-logout-btn" data-options="iconCls:'icon-add'" style="width:85px">强制下线
     </div>
@@ -19,8 +14,6 @@
 <div id="online_grid" style="padding: 10px">
 
 </div>
-</body>
-</html>
 
 
 
