--- a/src/main/resources/templates/system/user.html
+++ b/src/main/resources/templates/system/user.html
@@ -1,11 +1,6 @@
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>yuya-admin</title>
-    <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
-    <script type="text/javascript" th:src="@{/js/system/user.js}"></script>
-</head>
-<body>
+<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<script type="text/javascript" th:src="@{/js/system/user.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+
 <div id="user-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="user-search-form">
         <div class="easyui-linkbutton " id="user-flash-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
@@ -15,8 +10,9 @@
         </div>
         <div class="easyui-linkbutton " id="user-delete-btn" data-options="iconCls:'icon-remove'" style="width:70px">删除
         </div>
-        <%--<div class="easyui-linkbutton " id="user-detail-btn" data-options="iconCls:'icon-edit'" style="width:90px">查看详情--%>
-        <%--</div>--%>
+        <div class="easyui-linkbutton " id="user-detail-btn" data-options="iconCls:'icon-edit'" style="width:90px">
+            查看详情
+        </div>
         <div class="easyui-linkbutton " id="user-enable-btn" data-options="iconCls:'icon-add'" style="width:70px">启用
         </div>
         <div class="easyui-linkbutton " id="user-forbidden-btn" data-options="iconCls:'icon-remove'" style="width:70px">
@@ -154,8 +150,7 @@
                                                            class="easyui-textbox easyui-validatebox"/></p>
     </form>
 </div>
-</body>
-</html>
+
 
 
 
