--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -38,6 +38,15 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
+                             th:href="@{/dashboard}">Dashboard
+                        </div>
+                    </li>
+                </div>
+            </ul>
+            <ul style="list-style: none;padding: 0 0 0 0 ;">
+                <div style="padding: 5px 10px;">
+                    <li class="nav-list">
+                        <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
                              th:href="@{/ssh/host}">主机维护
                         </div>
                     </li>
@@ -61,6 +70,15 @@
                     </li>
                 </div>
             </ul>
+            <ul style="list-style: none;padding: 0 0 0 0 ;">
+                <div style="padding: 5px 10px;">
+                    <li class="nav-list">
+                        <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
+                             th:href="@{/front}">文字识别
+                        </div>
+                    </li>
+                </div>
+            </ul>
         </div>
     </div>
 </div>
@@ -74,13 +92,13 @@
         <div title="首页">
             <pre th:text="${banner}">
             </pre>
-            <div id="richtext"></div>
+            <!--<div id="richtext"></div>
             <script type="text/javascript">
                 var E = window.wangEditor;
                 var editor = new E('#richtext');
                 // 或者 var editor = new E( document.getElementById('#editor') )
                 editor.create();
-            </script>
+            </script>-->
         </div>
     </div>
 </div>
