--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -38,7 +38,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
-                             th:href="@{/dashboard}">Dashboard
+                             th:href="@{/dev/dashboard}">Dashboard
                         </div>
                     </li>
                 </div>
