--- a/src/main/resources/templates/dev/dashboard.html
+++ b/src/main/resources/templates/dev/dashboard.html
@@ -9,3 +9,5 @@
     </form>
 </div>
 <div id="disk" style="width: 800px;height:300px;"></div>
+<br />
+<div id="task" style="width: 800px;height:300px;"></div>
