增加文字识别模块

--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -13,7 +13,6 @@
     <script type="text/javascript" th:src="@{/js/easyui/easyui-lang-zh_CN.js}"></script>
     <script type="text/javascript" th:src="@{/js/system/common.js}"></script>
     <script type="text/javascript" th:src="@{/js/system/index.js}"></script>
-    <script type="text/javascript" th:src="@{/js/richtext/wangEditor.min.js}"></script>
 </head>
 <body class="easyui-layout">
 <div data-options="region:'north',border:false" style="height:40px; background:#198ec2;padding: 0;">
@@ -74,7 +73,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
-                             th:href="@{/front}">文字识别
+                             th:href="@{/dev/loadfile}">文字识别
                         </div>
                     </li>
                 </div>
