--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -36,7 +36,7 @@
             <ul style="list-style: none;padding: 0 0 0 0 ;">
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
-                        <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
+                        <div class="easyui-linkbutton" data-options="iconCls:'icon-print'" style="border: 0;"
                              th:href="@{/dev/dashboard}">Dashboard
                         </div>
                     </li>
@@ -72,7 +72,7 @@
             <ul style="list-style: none;padding: 0 0 0 0 ;">
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
-                        <div class="easyui-linkbutton" data-options="iconCls:'icon-reload'" style="border: 0;"
+                        <div class="easyui-linkbutton" data-options="iconCls:'icon-sum'" style="border: 0;"
                              th:href="@{/dev/loadfile}">文字识别
                         </div>
                     </li>
@@ -91,13 +91,6 @@
         <div title="首页">
             <pre th:text="${banner}">
             </pre>
-            <!--<div id="richtext"></div>
-            <script type="text/javascript">
-                var E = window.wangEditor;
-                var editor = new E('#richtext');
-                // 或者 var editor = new E( document.getElementById('#editor') )
-                editor.create();
-            </script>-->
         </div>
     </div>
 </div>
