--- a/src/main/resources/templates/dev/dashboard.html
+++ b/src/main/resources/templates/dev/dashboard.html
@@ -4,8 +4,9 @@
 <div id="dashboard-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="dashboard-search-form">
         <span style="line-height: 26px; ">主机:<input id="dashboard-host" name="dashboard-host" class="easyui-combobox" style="height: 26px; width: 300px"/></span>
-        <div class="easyui-linkbutton " id="dashboard-reload-btn" data-options="iconCls:'icon-reload'" style="width:70px">加载
-        </div>
+        <div class="easyui-linkbutton " id="dashboard-reload-btn" data-options="iconCls:'icon-reload'" style="width:70px">加载</div>
+        <div class="easyui-linkbutton " id="dashboard-start-btn" data-options="iconCls:'icon-ok'" style="width:100px">启用监控</div>
+        <div class="easyui-linkbutton " id="dashboard-stop-btn" data-options="iconCls:'icon-no'" style="width:100px">停用监控</div>
     </form>
 </div>
 <div id="disk" style="width: 800px;height:300px;"></div>
