改造监控的小架构，并且修复一些bug

--- a/src/main/resources/templates/dev/loadfile.html
+++ b/src/main/resources/templates/dev/loadfile.html
@@ -3,11 +3,15 @@
 <script type="text/javascript" th:src="@{/js/dev/loadfile.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <div id="dashboard-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="dashboard-search-form">
-        <span style="line-height: 26px; ">主机:<input id="loadfile-host" name="dashboard-host" class="easyui-combobox" style="height: 26px; width: 300px"/></span>
-        <span style="line-height: 26px; ">文件路径:<input name="loadfile-file" class="easyui-textbox"  style="width: 300px;height: 26px" /></span>
+        <span style="line-height: 26px; ">主机:<input id="loadfile-host" name="dashboard-host" class="easyui-combobox" style="height: 26px; width: 200px"/></span>
+        <span style="line-height: 26px; ">文件路径:<input id="loadfile-file" name="loadfile-file" class="easyui-textbox" value="/yuya/redis/redis.conf"  style="width: 260px;height: 26px" /></span>
+        <span style="line-height: 26px; ">识别字符:<input id="loadfile-char" name="loadfile-char" class="easyui-textbox"  style="width: 120px;height: 26px" /></span>
         <div class="easyui-linkbutton " id="loadfile-reload-btn" data-options="iconCls:'icon-reload'" style="width:70px">加载
         </div>
     </form>
 </div>
 <div id="loadfile" style="width: 800px;"></div>
+<br/>
+<br/>
+<br/>
 <div id="loadfile-result"></div>
