增加可自定义配置的首页HomePage

--- a/src/main/resources/static/css/icon.css
+++ b/src/main/resources/static/css/icon.css
@@ -121,3 +121,11 @@
 .icon-large-chart {
     background: url('icons/large_chart.png') no-repeat center center;
 }
+
+.icon-greenlight {
+    background: url('icons/greenlight.png') no-repeat center center;
+}
+
+.icon-redlight {
+    background: url('icons/redlight.png') no-repeat center center;
+}
