--- a/src/main/resources/templates/ssh/task.html
+++ b/src/main/resources/templates/ssh/task.html
@@ -1,8 +1,8 @@
 <script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <script type="text/javascript" th:src="@{/js/ssh/task.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <div id="task-tool-bar" style="padding: 10px 10px 0 10px">
-    <form id="user-search-form">
-        <div class="easyui-linkbutton " id="user-flash-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
+    <form id="task-search-form">
+        <div class="easyui-linkbutton " id="task-flash-btn" data-options="iconCls:'icon-reload'" style="width:70px">刷新
         </div>
 
         <span style="line-height: 26px; ">脚本任务:<input name="task-search-name" class="easyui-textbox"
