--- a/src/main/resources/templates/dev/homepage.html
+++ b/src/main/resources/templates/dev/homepage.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
+<!--<script type="text/javascript" th:src="@{/js/system/common.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <script type="text/javascript" th:src="@{/js/dev/homepage.js}" xmlns:th="http://www.w3.org/1999/xhtml"></script>
 <div id="homepage-tool-bar" style="padding: 10px 10px 0 10px">
     <form id="homepage-search-form">
@@ -33,4 +33,4 @@
         </div>
     </form>
 </div>
-
+-->
