--- a/src/main/resources/templates/ssh/host.html
+++ b/src/main/resources/templates/ssh/host.html
@@ -10,7 +10,7 @@
         <div class="easyui-linkbutton " id="host-delete-btn" data-options="iconCls:'icon-remove'" style="width:70px">删除
         </div>
 
-        <div class="easyui-linkbutton " id="user-detail-btn" data-options="iconCls:'icon-edit'" style="width:90px">
+        <div class="easyui-linkbutton " id="host-detail-btn" data-options="iconCls:'icon-edit'" style="width:90px">
             查看详情
         </div>
         <div class="easyui-linkbutton " id="host-enable-btn" data-options="iconCls:'icon-add'" style="width:70px">启用
