修复文件读取

--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -20,7 +20,7 @@
 <div data-options="region:'north',border:false" style="height:40px; background:#198ec2;padding: 0;">
     <div style="height: 40px; float: left; line-height: 40px">
         <span style="font-weight:bolder; font-size: large;padding-left: 10px;color: #ffffff">
-            育芽监控平台（开发）
+            哇哈哈监控平台（开发）
         </span>
     </div>
     <div style="float:right;height: 40px;padding: 0;">
